[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convension
# We could specify a library name using `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
name = "zero2prod"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.9"
actix-http = "3.0.0-beta.10"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"

